--- a/Practicos de programacion/practico2/ejercicio1.html
+++ b/Practicos de programacion/practico2/ejercicio1.html
@@ -16,20 +16,42 @@ elementos numéricos.-->
 </head>
 <body>
     <script>
-        var valores = [true, false, 2, "hola", "mundo", 3, "char"];
-        console.log(`El elemento con mas caracteres es: ${valores[4]} con ${valores[4].length} caracteres`)
-        console.log("orden de menor a mayor")
-        
-        console.log(`index 3 : ${valores[3]}`)
-        console.log(`index 6 : ${valores[6]}`)
-        console.log(`index 4 : ${valores[4]}`)
-        
-        var operador = prompt("ingresa un operador")
+        /*Ejercicio 1:
+A partir del siguiente array que se proporciona: var valores = [verdadero, false, 2, "hola",
+"mundo", 3, char];
+1. Determinar cuál de los elementos de texto es mayor, es decir el que contenga más
+letras.
+2. Imprimir los elementos de menor a mayor cantidad de letras.
+3. Determinar el resultado de las cuatro operaciones matemáticas realizadas con los dos
+elementos numéricos.*/
+
+        var valores = ["ver",false, 2, "hola", "mun", 3, "char"];
+        var nuevosValores = []
+
+//Paso todos los elementos de tipo strings a un nuevo array
+
+        for (let index = 0; index < valores.length; index++) {
+            const element = valores[index];
+
+            if(typeof element == "string"){
+                nuevosValores.push(element)
+        }
+    }
+
+//Encuentro el texto con mas letras
+let MenorMayor = nuevosValores.sort(function(a,b){return a.length - b.length})
+
+console.log(`El strings con mas letras es: ${MenorMayor.slice(-1)}`)
+// Imprimo los elementos de menor a mayor
+
+console.log(MenorMayor)
+
+    var operador = prompt("ingresa un operador")
 
         switch (operador) {
             case "+":
                 var resultado = valores[2] + valores[5]
-                console.log(`El resultado de la suma es ${resultado}`)
+                console.log('El resultado de la suma es ${resultado}')
                 break;
             case "-":
                 var resultado = valores[2] - valores[5]
